added detail to /:address/query on swagger
